iniciando a implementação para mobile

--- a/index.html
+++ b/index.html
@@ -47,13 +47,129 @@
         </div>
       </div>
     </div>
-  </main>
-  <div class="container">
-    <div class="call-to-action">
-      <div><h2>OUR CREATIONS</h2></div>
-      <div><a href="#">SEE ALL</a></div>
+    <div class="container">
+      <div class="call-to-action">
+        <div>
+          <h2>OUR CREATIONS</h2>
+        </div>
+        <div class="btn-active call-btn"><a href="#">SEE ALL</a></div>
+      </div>
+      <div class="desktop-version grid">
+        <div class="grid-item">
+          <a href=""><img src="images/desktop/image-deep-earth.jpg" alt="Deep Earth Image"></a>
+          <p>DEEP EARTH</p>
+        </div>
+        <div class="grid-item">
+          <a href=""><img src="images/desktop/image-night-arcade.jpg" alt="Night arcade Image"></a>
+          <p>night arcade</p>
+        </div>
+        <div class="grid-item">
+          <a href=""><img src="images/desktop/image-soccer-team.jpg" alt="Soccer team VR Image"></a>
+          <p>Soccer team VR</p>
+        </div>
+        <div class="grid-item">
+          <a href=""><img src="images/desktop/image-grid.jpg" alt="The Grid Image"></a>
+          <p>the grid</p>
+        </div>
+        <div class="grid-item">
+          <a href=""><img src="images/desktop/image-from-above.jpg" alt="From above Image"></a>
+          <p>from up above vr</p>
+        </div>
+        <div class="grid-item">
+          <a href=""><img src="images/desktop/image-pocket-borealis.jpg" alt="pocket borealis"></a>
+          <p>poket borealis</p>
+        </div>
+        <div class="grid-item">
+         <a href=""> <img src="images/desktop/image-curiosity.jpg" alt="the curiosity"></a>
+          <p>the curiosity</p>
+        </div>
+        <div class="grid-item">
+          <a href=""><img src="images/desktop/image-fisheye.jpg" alt="make it fisheye"></a>
+          <p>make it fisheye</p>
+        </div>
+        <div class="btn-hidden call-btn"><a href="#">SEE ALL</a></div>
+      </div>
+      <div class="mobile-version grid">
+        <div class="grid-item">
+          <a href=""><img src="images/mobile/image-deep-earth.jpg" alt="Deep Earth Image"></a>
+          <p>DEEP EARTH</p>
+        </div>
+        <div class="grid-item">
+          <a href=""><img src="images/mobile/image-night-arcade.jpg" alt="Night arcade Image"></a>
+          <p>night arcade</p>
+        </div>
+        <div class="grid-item">
+          <a href=""><img src="images/mobile/image-soccer-team.jpg" alt="Soccer team VR Image"></a>
+          <p>Soccer team VR</p>
+        </div>
+        <div class="grid-item">
+          <a href=""><img src="images/mobile/image-grid.jpg" alt="The Grid Image"></a>
+          <p>the grid</p>
+        </div>
+        <div class="grid-item">
+          <a href=""><img src="images/mobile/image-from-above.jpg" alt="From above Image"></a>
+          <p>from up above vr</p>
+        </div>
+        <div class="grid-item">
+          <a href=""><img src="images/mobile/image-pocket-borealis.jpg" alt="pocket borealis"></a>
+          <p>poket borealis</p>
+        </div>
+        <div class="grid-item">
+         <a href=""> <img src="images/mobile/image-curiosity.jpg" alt="the curiosity"></a>
+          <p>the curiosity</p>
+        </div>
+        <div class="grid-item">
+          <a href=""><img src="images/mobile/image-fisheye.jpg" alt="make it fisheye"></a>
+          <p>make it fisheye</p>
+        </div>
+        <div class="btn-hidden call-btn"><a href="#">SEE ALL</a></div>
+      </div>
     </div>
-  </div>
+  </main>
+  <footer class="footer">
+    <div class="desktop-version container">
+      <div class="footer-head">
+        <a href="#" class="brand"><img src="images/logo.svg" alt="Logo"></a>
+        <ul>
+          <li><a href="#"><img src="images/icon-facebook.svg" alt="facebook"></a></li>
+          <li><a href="#"><img src="images/icon-twitter.svg" alt="twitter"></a></li>
+          <li><a href="#"><img src="images/icon-pinterest.svg" alt="pinterest"></a></li>
+          <li><a href="#"><img src="images/icon-instagram.svg" alt="instagram"></a></li>
+        </ul>
+      </div>
+      <div class="footer-body nav-menu">
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Careers</a></li>
+          <li><a href="#">Events</a></li>
+          <li><a href="#">Products</a></li>
+          <li><a href="#">Support</a></li>
+        </ul>
+        <p>© 2021 Loopstudios. All rights reserved.</p>
+      </div>
+    </div>
+    <div class="footer-mobile-version container">
+      <div class="footer-head">
+        <a href="#" class="footer-brand"><img src="images/logo.svg" alt="Logo"></a>
+      </div>
+      <div class="footer-body">
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Careers</a></li>
+          <li><a href="#">Events</a></li>
+          <li><a href="#">Products</a></li>
+          <li><a href="#">Support</a></li>
+        </ul>
+        <ul>
+          <li><a href="#"><img src="images/icon-facebook.svg" alt="facebook"></a></li>
+          <li><a href="#"><img src="images/icon-twitter.svg" alt="twitter"></a></li>
+          <li><a href="#"><img src="images/icon-pinterest.svg" alt="pinterest"></a></li>
+          <li><a href="#"><img src="images/icon-instagram.svg" alt="instagram"></a></li>
+        </ul>
+        <p>© 2021 Loopstudios. All rights reserved.</p>
+      </div>
+    </div>
+  </footer>
+  <script src="js/script.js"></script>
 </body>
-
 </html>
